--- a/classification_symptoms.ipynb
+++ b/classification_symptoms.ipynb
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "gdS8U7G5I_aF"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "nQV6JCzxCOzI"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
         "id": "3BjPKjncC284",
         "outputId": "ab8b800a-c04a-4cd1-d890-8024cc788425"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
         "id": "_3GKdHU5EAZ8",
         "outputId": "e6a27fea-ab0f-4cbe-eb4e-c3394aaac802"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +253,7 @@
         "id": "qz5lX3D1C9sY",
         "outputId": "6a516683-ac4b-4c8c-c5a2-d21958f5e69f"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +369,7 @@
         "id": "4ZOKT2tVHljs",
         "outputId": "ec6c6ffb-cb10-47ca-e623-250aaa21194b"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
         "id": "lhmXDCJHM9WJ",
         "outputId": "a83e4608-3eb3-47a5-9226-d2a4570fd9b4"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +724,7 @@
       "metadata": {
         "id": "0FuGUz8pNiSq"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +742,7 @@
         "id": "14Ll0uaFPIsm",
         "outputId": "53bbe59b-1093-48c9-de47-06ca649081af"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1216,7 +1216,7 @@
         "id": "js0o8yv0PU61",
         "outputId": "28d3c7a4-c2b5-4b50-e1f6-f00614a1baca"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1613,7 +1613,7 @@
         "id": "e2Md0UouPu-v",
         "outputId": "68cc6add-becb-4057-937e-c11bd3f4c3aa"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1703,7 +1703,7 @@
       "metadata": {
         "id": "DvNSUpr12h-1"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1720,7 +1720,7 @@
         },
         "outputId": "89bf9213-7e14-4a30-aa56-bd16b0793510"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1760,7 +1760,7 @@
         },
         "outputId": "506204ab-8bbf-451b-8ac8-2c8075e39e45"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1783,7 +1783,7 @@
       "metadata": {
         "id": "VV6yHnmphSZH"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1794,7 +1794,7 @@
       "metadata": {
         "id": "7KVy-ACbE5OD"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1813,7 +1813,7 @@
         },
         "outputId": "be2e8b27-3633-4345-c918-702f3115d7f0"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1888,7 +1888,7 @@
         "id": "nKFtW1XJQcg8",
         "outputId": "7730861d-d167-4f12-91c4-9790c7c0ead1"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1898,6 +1898,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##proximamente:<br>\n",
+        "usar validacion cruzada <br>\n",
+        "usar busqueda de hiperparametros para el modelo o los modelos <br>\n",
+        "crear input para probar el modelo con input de syntomas nuevos"
+      ],
+      "metadata": {
+        "id": "tD3liwYPprAs"
+      }
     }
   ]
 }
